# mfac_toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  TUTORIAL.md  __init__.py  _mfac_core.pyi  config.py  controller.py  logger.py  model.py  pyproject.toml  tuning.py
.github/workflows/: release.yml
analysis/: __init__.py  frequency.py  metrics.py
docs/: api.md
examples/: __init__.py  basic_example.py  plants.py  simulation_example.py  tuning_example.py
mfac_toolkit/: __init__.py  _mfac_core.pyd  _mfac_core.pyi  config.py  controller.py  logger.py  tuning.py
mfac_toolkit/controller/: __init__.py  _base.py  _mimo.py  _siso.py
mfac_toolkit/examples/: __init__.py  basic_example.py  config.yaml  mimo_config.yaml  mimo_coupled_example.py  mimo_example.py  plants.py  siso_config.yaml
tests/: test_config.py  test_controller.py  test_core.py  test_logger.py  test_mimo.py  test_tuning.py
visualization/: __init__.py  sweep.py  time_response.py
