# Copyright (c) 2026 RobotX. All rights reserved.
# Author: Jiqian Zhao <zhaojq2003@163.com>
# Date: 2026-06-27

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mfac_toolkit"
version = "1.0.0"
description = "无模型自适应控制（MFAC）工具包。"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Jiqian Zhao", email = "zhaojq2003@163.com"},
]
keywords = ["control", "adaptive-control", "MFAC", "CFDL", "model-free"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/Zhaojq2003/mfac_toolkit"
Issues = "https://github.com/Zhaojq2003/mfac_toolkit/issues"

[tool.setuptools]
packages = [
    "mfac_toolkit",
    "mfac_toolkit.examples",
]
package-dir = {"mfac_toolkit" = "."}
include-package-data = true

[tool.setuptools.package-data]
mfac_toolkit = ["_mfac_core*.so", "_mfac_core.pyi", "py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
ignore-names = ["A", "B", "C", "D"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260518",
]
