# Copyright (c) 2026 北方工业大学 RobotX 实验室 (RobotX Lab, North China University of Technology).
# Author: Jiqian Zhao <zhaojq2003@163.com>
# Date: 2026-06-27

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mfac_toolkit"
version = "1.1.0"
description = "无模型自适应控制（MFAC）工具包。"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Jiqian Zhao", email = "zhaojq2003@163.com"},
]
keywords = ["control", "adaptive-control", "MFAC", "CFDL", "model-free"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/Zhaojq2003/mfac_toolkit"
Issues = "https://github.com/Zhaojq2003/mfac_toolkit/issues"

[tool.maturin]
# Rust workspace manifest (cloned from the private mfac_core repository in CI).
manifest-path = "mfac_core/crates/mfac-py/Cargo.toml"
# Python import path for the compiled extension, matching `import mfac_toolkit._mfac_core`.
module-name = "mfac_toolkit._mfac_core"
# Python package lives in the project root under `mfac_toolkit/`.
python-source = "."
# Include the type stub for the extension module.
include = ["mfac_toolkit/_mfac_core.pyi", "mfac_toolkit/py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
ignore-names = ["A", "B", "C", "D"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "maturin>=1.14.1",
    "types-pyyaml>=6.0.12.20260518",
]
